# rag-router

./: .containerignore  .env  .gitignore  Containerfile  README.md  agent_builder.py  image.sh  llm_router.py  main.py  prompt_builder.py  pyproject.toml  retriever.py  run.py  test.sh  test_request.sh  vectorizer.py
local/: .env.sample  .gitignore  lsd.sh  playground.sh  run.yaml  test.py
local/docs/: bon-texto-2024-83-10.md  bon-texto-2025-35-11.md
